deal test and doc
